RESOLVED FIXED32004
Reloading WebInspector from context menu is closing it instead of reloading.
https://bugs.webkit.org/show_bug.cgi?id=32004
Summary Reloading WebInspector from context menu is closing it instead of reloading.
Yael
Reported 2009-11-30 19:17:26 PST
Opening WebInspector and reloading it from the context menu is closing it, but not reopening it. The reason is that the m_page of the InspectorController is being cleared but a new one is not being created. A patch will be coming soon.
Attachments
Patch (1.36 KB, patch)
2009-12-01 06:41 PST, Yael
no flags
Yael
Comment 1 2009-12-01 06:41:30 PST
Created attachment 44071 [details] Patch Do not delete the page associated with the WebInspector during a reload.
Yael
Comment 2 2009-12-01 06:44:30 PST
This patch does not fix the problem for Qt port, only for Mac port.
WebKit Review Bot
Comment 3 2009-12-01 06:45:18 PST
style-queue ran check-webkit-style on attachment 44071 [details] without any errors.
Eric Seidel (no email)
Comment 4 2009-12-01 07:17:08 PST
Comment on attachment 44071 [details] Patch Seems we should have a manual test for this. Or some sort of test.
WebKit Commit Bot
Comment 5 2009-12-01 09:24:18 PST
Comment on attachment 44071 [details] Patch Clearing flags on attachment: 44071 Committed r51544: <http://trac.webkit.org/changeset/51544>
WebKit Commit Bot
Comment 6 2009-12-01 09:24:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.