2009-12-01  Yael Aharon  <yael.aharon@nokia.com>

Reviewed by Timothy Hatcher.

        Reloading WebInspector from context menu is closing it instead of reloading.
        https://bugs.webkit.org/show_bug.cgi?id=32004

        When reloading WebInspector, don't delete its m_page.

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::close):

Canonical link: https://commits.webkit.org/42971@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51544 268f45cc-cd09-0410-ab3c-d52691b4dbfc